@@ -612,6 +612,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -1523,6 +1533,20 @@ operator|.
 name|collect
 operator|.
 name|Lists
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|Sets
 import|;
 end_import
 
@@ -2933,6 +2957,19 @@ specifier|protected
 specifier|final
 name|int
 name|storagesPerDatanode
+decl_stmt|;
+DECL|field|fileSystems
+specifier|private
+name|Set
+argument_list|<
+name|FileSystem
+argument_list|>
+name|fileSystems
+init|=
+name|Sets
+operator|.
+name|newHashSet
+argument_list|()
 decl_stmt|;
 comment|/**    * A unique instance identifier for the cluster. This    * is used to disambiguate HA filesystems in the case where    * multiple MiniDFSClusters are used in the same test suite.     */
 DECL|field|instanceId
@@ -7883,6 +7920,27 @@ name|boolean
 name|deleteDfsDir
 parameter_list|)
 block|{
+name|shutdown
+argument_list|(
+name|deleteDfsDir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Shutdown all the nodes in the cluster.    */
+DECL|method|shutdown (boolean deleteDfsDir, boolean closeFileSystem)
+specifier|public
+name|void
+name|shutdown
+parameter_list|(
+name|boolean
+name|deleteDfsDir
+parameter_list|,
+name|boolean
+name|closeFileSystem
+parameter_list|)
+block|{
 name|LOG
 operator|.
 name|info
@@ -7928,6 +7986,50 @@ literal|"Test resulted in an unexpected exit"
 argument_list|)
 throw|;
 block|}
+block|}
+if|if
+condition|(
+name|closeFileSystem
+condition|)
+block|{
+for|for
+control|(
+name|FileSystem
+name|fs
+range|:
+name|fileSystems
+control|)
+block|{
+try|try
+block|{
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Exception while closing file system"
+argument_list|,
+name|ioe
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|fileSystems
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 block|}
 name|shutdownDataNodes
 argument_list|()
@@ -9726,7 +9828,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+name|DistributedFileSystem
+name|dfs
+init|=
 operator|(
 name|DistributedFileSystem
 operator|)
@@ -9746,6 +9850,16 @@ index|]
 operator|.
 name|conf
 argument_list|)
+decl_stmt|;
+name|fileSystems
+operator|.
+name|add
+argument_list|(
+name|dfs
+argument_list|)
+expr_stmt|;
+return|return
+name|dfs
 return|;
 block|}
 comment|/**    * Get another FileSystem instance that is different from FileSystem.get(conf).    * This simulating different threads working on different FileSystem instances.    */
@@ -9760,7 +9874,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+name|FileSystem
+name|dfs
+init|=
 name|FileSystem
 operator|.
 name|newInstance
@@ -9777,6 +9893,16 @@ index|]
 operator|.
 name|conf
 argument_list|)
+decl_stmt|;
+name|fileSystems
+operator|.
+name|add
+argument_list|(
+name|dfs
+argument_list|)
+expr_stmt|;
+return|return
+name|dfs
 return|;
 block|}
 comment|/**    * @return a http URL    */
