@@ -3969,7 +3969,11 @@ expr_stmt|;
 name|cluster
 operator|.
 name|shutdown
-argument_list|()
+argument_list|(
+literal|false
+argument_list|,
+literal|false
+argument_list|)
 expr_stmt|;
 name|cluster
 operator|=
